# Tp2-Paradigmas

./: .gitignore
Ejercicio-1/: CMakeLists.txt  main.cpp
Ejercicio-1/include/: Pokedex.hpp  Pokemon.hpp  PokemonInfo.hpp
Ejercicio-1/src/: Pokedex.cpp  Pokemon.cpp  PokemonInfo.cpp
Ejercicio-2/: CMakeLists.txt  main.cpp
Ejercicio-2/include/: drone.hpp
Ejercicio-2/src/: drone.cpp
Ejercicio-3/: CMakeLists.txt  main.cpp
